# automated-issue-estimator

./: LICENSE  README.md  cli.py  estimate_size.py  predict_repl.py  pyproject.toml  requirements.txt  setup.sh  summarize_issue.py  train_embeddings.py  utils.py
app/: cli.py  estimate_size.py  jira_downloader.py  jira_extractor.py  predict_repl.py  summarize_issue.py  train_embeddings.py  utils.py
