[project]
name = "automated-issue-estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "alive-progress>=3.2.0",
    "jira>=3.8.0",
    "joblib>=1.5.1",
    "numpy>=2.3.0",
    "prompt-toolkit>=3.0.51",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "xgboost>=3.0.2",
]
